# scoop-bucket-x-generator

./: .gitignore  README.md  pyproject.toml
.github/: renovate.json
.github/workflows/: codeql.yml  index.yml  issue_comment.yml  issues.yml  merge.yml  pull_request.yml
bucket/: g-helper-experimental-pawnio.json  g-helper-experimental.json  gh-completion.json  nvidia-profile-inspector-revamped.json  pawnio.json  thrm.json  uv-completion.json
download/: __main__.py
index/: __main__.py
merge/: __init__.py  __main__.py  config.py
